01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: #{name}#
  name: #{name}#
  namespace: #{namespace}#-#{env}#
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: #{name}#
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: #{name}#
    spec:
      containers:
      - name: #{name}#
        image: #{registry}#/#{name}#-#{env}#:#{Build.BuildId}#
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash"]
        args: ["-c", "java -javaagent:/opt/agents/jolokia-jvm-1.6.2-agent.jar=host=0.0.0.0 -server -XX:+UseG1GC -XX:+ExplicitGCInvokesConcurrent -XX:MaxGCPauseMillis=500 -Xms#{java-min}# -Xmx#{java-max}# -XX:+ExitOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseStringDeduplication -jar /opt/#{name}#/#{name}#*.jar"]
        workingDir: /opt/#{name}#
        ports:
        - containerPort: 8099
          name: service
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        resources:
          limits:
            cpu: #{cpu-lim}#
            memory: #{mem-lim}#
          requests:
            cpu: #{cpu-req}#
            memory: #{mem-req}#
        volumeMounts:
        - name: nfs-#{namespace}#-#{env}#-data
          mountPath: /opt/#{name}#/logs
          subPath: #{name}#/logs
        - name: nfs-#{namespace}#-#{env}#-data
          mountPath: /opt/agents
          subPath: agents
      restartPolicy: Always
      terminationGracePeriodSeconds: 0
      imagePullSecrets:
      - name: registry-tata
      volumes:
      - name: nfs-#{namespace}#-#{env}#-data
        persistentVolumeClaim:
          claimName: nfs-#{namespace}#-#{env}#-data
