02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: #{name}#
  name: #{name}#
  namespace: #{namespace}#-#{env}#
spec:
  ports:
  - name: service
    port: 8099
    protocol: TCP
    targetPort: 8099
  - name: jolokia
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app.kubernetes.io/instance: #{name}#
---
