03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/send_timeout: "300"
    nginx.ingress.kubernetes.io/client_header_timeout: "300"
    nginx.ingress.kubernetes.io/client_body_timeout: "300"
    nginx.ingress.kubernetes.io/client_max_body_size: "30M"
    nginx.ingress.kubernetes.io/proxy-body-size: "30M"
  name: #{name}#-ingress
  namespace: #{namespace}#-#{env}#
spec:
  rules:
  - host: #{host}#.#{domain}#
    http:
      paths:
      - backend:
          service:
            name: #{name}#
            port:
              number: 8099
        path: /#{name}#
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - #{host}#.#{domain}#
